FIx of scrollbar blinking

--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@ html {
 
 body {
     font-family: 'Ubuntu', sans-serif;
+    overflow-y: scroll;
 }
 
 .App-main {
